<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@drawable/shadow" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshTeams"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dimen_4dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recTeams"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp" />
    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>