...
    <string name="manchestercity_desc" tools:ignore="Typos">Manchester City is a football club from United Kingdom</string>
    <string name="manchesterunited_desc" tools:ignore="Typos">Manchester United is a football club from United Kingdom</string>
    <string name="realmadrid_desc" tools:ignore="Typos">Real Madrid is a football club from Spain</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">favorites</string>
    <string name="fav_match">Fav. Match</string>
    <string name="teams">teams</string>

</resources>

